[gd_scene load_steps=2 format=2]

[ext_resource path="res://outro.gd" type="Script" id=1]

[node name="Outro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -99.5
margin_right = 231.0
margin_bottom = 99.5
custom_constants/separation = 65

[node name="ReportPercentLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_right = 462.0
margin_bottom = 32.0
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 462.0
margin_bottom = 32.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 32.0
custom_constants/margin_right = 50

[node name="ReportProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 54.0
margin_right = 408.0
margin_bottom = 32.0
size_flags_horizontal = 3
step = 1.0

[node name="Tween" type="Tween" parent="VBoxContainer/HBoxContainer/ReportProgressBar"]

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 412.0
margin_right = 462.0
margin_bottom = 32.0
custom_constants/margin_right = 50

[node name="ResumeLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 97.0
margin_right = 462.0
margin_bottom = 129.0
align = 1
valign = 1
autowrap = true

[node name="Credits" type="Label" parent="."]
visible = false
anchor_left = 0.0319444
anchor_top = 0.989844
anchor_right = 0.0319444
anchor_bottom = 0.989844
margin_left = 17.0
margin_top = -87.0
margin_right = 533.0
margin_bottom = -20.0
text = "Автор игры: Lesha Lukash
Автор сценария: ThatRedSpy"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="tween_completed" from="VBoxContainer/HBoxContainer/ReportProgressBar/Tween" to="." method="_on_Tween_tween_completed"]
